--- a/src/Components/Narbar/PokeTitle/PokeTitle.css
+++ b/src/Components/Narbar/PokeTitle/PokeTitle.css
@@ -1,10 +1,19 @@
 .pokeTitle {
     text-transform: uppercase;
     font-size: 2.5em;
-    margin-left: 10px;
+    margin-left: 20px;
     position: relative;
-    top: -10px;
-    color: #fafa06;
-    background-color: #ffffff;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 2px 0 #a92121;
+    top: -20px;
+    color: #fdca04;
+    text-shadow: -2px -2px 0 #385ba8, 2px -1px 0 #123872, -1px 2px 0 #11356d, -5px -2px 0 #0b26b9;
+    letter-spacing: -1px;
 }
+
+.pokeTitleP {
+    font-size: 3.5rem;
+}
+
+
+/*.pokeTitleG {*/
+/*    font-size: 3rem;*/
+/*}*/
