styled splash page, and no entry page

--- a/src/Components/Narbar/PokeTitle/PokeTitle.css
+++ b/src/Components/Narbar/PokeTitle/PokeTitle.css
@@ -7,13 +7,42 @@
     color: #fdca04;
     text-shadow: -2px -2px 0 #385ba8, 2px -1px 0 #123872, -1px 2px 0 #11356d, -5px -2px 0 #0b26b9;
     letter-spacing: -1px;
+    z-index: 2;
 }
 
 .pokeTitleP {
     font-size: 4rem;
 }
 
+.pokeTitleContainer:hover {
+    transform: translate(2px,2px);
+}
+.pokeTitleContainer:hover .pokeTitleImage {
+    display: block;
+}
 
-/*.pokeTitleG {*/
-/*    font-size: 3rem;*/
-/*}*/
+
+.pokeTitleImage {
+    background: url("./assets/pokeball.png") no-repeat;
+    height: 50px;
+    width: 50px;
+    position: relative;
+    bottom: 110px;
+    left: 270px;
+    z-index: 1;
+    display: none;
+    animation: pokeJiggle 2s alternate;
+    animation-iteration-count: infinite;
+}
+
+@keyframes pokeJiggle {
+    from {
+        transform: translate(-55%, -55%);
+    }
+    50% {
+        transform: translate(-55%, -57.5%);
+    }
+    to {
+        transform: translate(-55%, -55%);
+    }
+}
