--- a/src/Components/PokeSplash/PokeSplash.css
+++ b/src/Components/PokeSplash/PokeSplash.css
@@ -1,7 +1,7 @@
-/*.pokeSplash {*/
-/*    background-color: rgba(0, 62, 244, 0.24);*/
-/*    aspect-ratio: 16 / 9;*/
-/*}*/
+.pokeSplash {
+    background-color: rgba(84, 140, 255, 0.35);
+    height: 100vh;
+}
 
 .pokeSplashContainer {
     display: flex;
@@ -46,6 +46,7 @@
     box-shadow: 0 9px #999;
     font-family: 'Play', sans-serif;
     text-transform: uppercase;
+    z-index: 10;
 }
 
 .pokeSplashButton:hover {background-color: #000000
@@ -58,10 +59,21 @@
 }
 
 .piplup {
-    background: url("./assets/piplup.png");
-    width: 100px;
-    height: 100px;
-    position: relative;
-    top: 10px;
-    z-index: 10;
+    background: url("./assets/piplup.png") no-repeat;
+    height: 350px;
+    width: 350px;
+    position: absolute;
+    top: 140px;
+    left: 120px;
+    z-index: 0;
+}
+
+.wartortle {
+    background: url("./assets/wartortle.png") no-repeat;
+    height: 400px;
+    width: 350px;
+    position: absolute;
+    top: 100px;
+    right: 60px;
+    z-index: 0;
 }
