--- a/src/Components/PokeProfileCollection/PokeProfileCollection.css
+++ b/src/Components/PokeProfileCollection/PokeProfileCollection.css
@@ -2,14 +2,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+}
+
+.searchInput {
+    position: relative;
+    height: 20px;
+    border-radius: 5px;
+    margin: 20px;
+    top: 90px;
 }
 
 .pokeCardContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    margin-top: 130px;
+    gap: 95px;
+    margin-top: 100px;
 }
 
 .pokeCard {
@@ -22,6 +29,7 @@
     border: 1px solid #0b0606;
     padding: 10px;
     box-sizing: border-box;
+    margin: -10px
 }
 
 .pokeCard img {
@@ -33,5 +41,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 100px;
+    position: relative;
+    top: 30px;
 }
+
