--- a/src/Components/PokeProfileCollection/PokeProfileCollection.scss
+++ b/src/Components/PokeProfileCollection/PokeProfileCollection.scss
@@ -1,3 +1,14 @@
+$main-text-color: #000000;
+$click-me-cursor: pointer;
+$button-size: 1.5rem;
+
+
+@mixin buttonStyle {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
 .pokeProfileCollectionContainer {
   display: flex;
   flex-direction: column;
@@ -5,6 +16,7 @@
 }
 
 /* Search bar styling */
+
 .searchContainer {
   width: fit-content;
   height: fit-content;
@@ -20,13 +32,13 @@
   letter-spacing: 1px;
   outline: none;
   border-radius: 25px;
-  transition: all 0.5s ease-in-out;
+  transition: all .5s ease-in-out;
   background-color: #fbc904;
   padding: 10px 40px 10px 10px;
 }
 
 .searchInput::placeholder {
-  color: #000000;
+  color: $main-text-color;
   font-size: 1rem;
   letter-spacing: 1px;
 }
@@ -44,18 +56,20 @@
 
 .btn-search:focus ~ .searchInput {
   background-color: transparent;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+  border-bottom: 1px solid rgba(255, 255, 255, .5);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
 
 .searchInput:focus {
   width: fit-content;
   border-radius: 0;
   background-color: transparent;
-  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
 
+
 /* pokemon profile card container */
+
 .pokeCardContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -65,6 +79,7 @@
 }
 
 /* Individual pokemon cards */
+
 .pokeCard {
   display: flex;
   flex-direction: column;
@@ -74,7 +89,7 @@
   border: 5px ridge #0b0606;
   margin: -15px;
   box-shadow: 0 5px #666;
-  cursor: pointer;
+  cursor: $click-me-cursor;
 }
 
 .avatarName {
@@ -89,40 +104,39 @@
 }
 
 /* navigation buttons */
+
 .navigationButtons {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   top: 30px;
-}
-.navigationButtons button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  height: 50px;
-  width: 50px;
-  color: #000000;
-  font-size: 1.5rem;
-  margin: 0 20px;
-}
-.navigationButtons button:active {
-  transform: translateY(1px);
+
+  button {
+    @include buttonStyle;
+    height: 50px;
+    width: 50px;
+    color: $main-text-color;
+    font-size: $button-size;
+    margin: 0 20px;
+
+    &:active {
+      transform: translateY(1px);
+    }
+  }
 }
 
 .resetPokemonButton {
   position: absolute;
   right: 350px;
   top: 70px;
-}
-.resetPokemonButton button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  font-size: 1.5rem;
-}
-.resetPokemonButton button:active {
-  transform: rotate(-420deg);
+
+  button {
+    @include buttonStyle;
+    font-size: $button-size;
+    &:active {
+      transform: rotate(-420deg);
+    }
+  }
 }
 
-/*# sourceMappingURL=PokeProfileCollection.css.map */
