--- a/src/Components/Narbar/Navbar.css
+++ b/src/Components/Narbar/Navbar.css
@@ -1,6 +1,10 @@
 nav {
-    position: fixed;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 80px;
+  justify-content: space-between;
+  background: rgba(223, 115, 115, 0.47); /* temp - just to see */
 }
+
+/*# sourceMappingURL=Navbar.css.map */
