--- a/src/Components/PokeDirection/PokeDirection.scss
+++ b/src/Components/PokeDirection/PokeDirection.scss
@@ -22,17 +22,18 @@
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
-  font-family: "Play", sans-serif;
+  font-family: 'Play', sans-serif;
   text-transform: uppercase;
+  &:hover {
+    background-color: #e3d3d3
+  }
+  &:active {
+    background-color: #e3d3d3;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
 }
-.pokeDirectionButton:hover {
-  background-color: #e3d3d3;
-}
-.pokeDirectionButton:active {
-  background-color: #e3d3d3;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
+
 
 .yes {
   margin-right: 50px;
@@ -41,5 +42,3 @@
 .no {
   margin-left: 50px;
 }
-
-/*# sourceMappingURL=PokeDirection.css.map */
