--- a/src/Components/Narbar/Navbar.css
+++ b/src/Components/Narbar/Navbar.css
@@ -4,7 +4,8 @@ nav {
   width: 100%;
   height: 80px;
   justify-content: space-between;
-  background: rgba(223, 115, 115, 0.47); /* temp - just to see */
+  background: rgb(194, 204, 253); /* temp - just to see */
+  border-radius: 30px;
 }
 
 /*# sourceMappingURL=Navbar.css.map */
