--- a/src/Components/PokeProfileCollection/PokeProfileCollection.css
+++ b/src/Components/PokeProfileCollection/PokeProfileCollection.css
@@ -8,7 +8,7 @@
 .searchContainer {
   width: fit-content;
   height: fit-content;
-  position: relative;
+  position: absolute;
   top: 90px;
 }
 
@@ -60,7 +60,7 @@
   grid-template-columns: repeat(3, 1fr);
   column-gap: 150px;
   row-gap: 50px;
-  margin-top: 120px;
+  margin-top: 180px;
   height: 400px;
 }
 
@@ -112,7 +112,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  bottom: -40px;
+  bottom: -30px;
 }
 .navigationButtons button {
   background: none;
